# LaTeX-Calculator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/latexcalc/: cli.py  evaluator.py
tests/: test_cli.py  test_evaluator.py
